--- a/ios/slush/Info.plist
+++ b/ios/slush/Info.plist
@@ -32,7 +32,27 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Altis-regular.ttf</string>
+		<string>Athiti-Bold.ttf</string>
+		<string>Athiti-ExtraLight.ttf</string>
+		<string>Athiti-Light.ttf</string>
+		<string>Athiti-Medium.ttf</string>
+		<string>Athiti-Regular.ttf</string>
+		<string>Athiti-SemiBold.ttf</string>
+		<string>Etihad Altis Light Light.ttf</string>
+		<string>SF-Pro-Display-Black.ttf</string>
+		<string>SF-Pro-Display-BlackItalic.ttf</string>
+		<string>SF-Pro-Display-Bold.ttf</string>
+		<string>SF-Pro-Display-BoldItalic.ttf</string>
+		<string>SF-Pro-Display-Light.ttf</string>
+		<string>SF-Pro-Display-Medium.ttf</string>
+		<string>SF-Pro-Display-Regular.ttf</string>
+		<string>SF-Pro-Display-Semibold.ttf</string>
+		<string>SF-Pro-Display-Thin.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
