--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.6.2",
     "react": "18.2.0",
     "react-native": "0.73.0",
+    "react-native-agora": "^4.2.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.29.0"
   },
