--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build": "cd android && ./gradlew clean && ./gradlew assembleRelease && cd ..",
+    "release": "cd android && ./gradlew clean && ./gradlew bundleRelease && cd .."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "react": "18.2.0",
     "react-native": "0.73.0",
     "react-native-agora": "^4.2.6",
     "react-native-animatable": "^1.4.0",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.29.0"
   },
