--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.0",
     "react-native-agora": "^4.2.6",
